Fix name issue with overflow hidden

--- a/src/app/meet-the-team/team-members.component.scss
+++ b/src/app/meet-the-team/team-members.component.scss
@@ -95,6 +95,7 @@
     &__name-grid {
         margin: 65px 45px 35px 42px;
         white-space: nowrap;
+        overflow: hidden;
     }
 
     &__name-list {
